update authentication flow
successfully login to the os after authentication
